tests/errors/user-level-constraint.expect
---CODE---
1
---STDERR---
error: user-level component cannot have ordering constraints over events
  ┌─ tests/errors/user-level-constraint.fil:6:15
  │
6 │ ) -> () where L > G+1, G+5 > L {
  │               ^^^^^^^ user-level component defines ordering between events: L > G+1

error: user-level component cannot have ordering constraints over events
  ┌─ tests/errors/user-level-constraint.fil:6:24
  │
6 │ ) -> () where L > G+1, G+5 > L {
  │                        ^^^^^^^ user-level component defines ordering between events: G+5 > L

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
